--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/cli",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "description": "A CLI for building web apps. Like create-react-app but configurable via templates.",
   "keywords": [
     "webpack",
@@ -28,8 +28,7 @@
     "clean": "tradie clean",
     "build": "tradie build",
     "watch": "tradie build --watch",
-    "test": "tradie test",
-    "postinstall": "yarn run build"
+    "test": "tradie test"
   },
   "license": "MIT"
 }
