--- a/packages/generator-utils/package.json
+++ b/packages/generator-utils/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@tradie/generator-utils",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
   "dependencies": {
+    "@tradie/match-utils": "^1.1.0-alpha.b2a4b8e1",
     "chalk": "^2.0.1",
     "diff": "^3.2.0",
     "extend": "^3.0.1",
     "finder-on-steroids": "^0.4.0",
     "fs-extra": "^3.0.1",
-    "inquirer": "^3.2.0",
-    "@tradie/match-utils": "^1.0.0"
+    "inquirer": "^3.2.0"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
