--- a/packages/webpack-utils/package.json
+++ b/packages/webpack-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/webpack-utils",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
   "files": [
     "lib"
