--- a/packages/babel-utils/package.json
+++ b/packages/babel-utils/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@tradie/babel-utils",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
   "dependencies": {
+    "@tradie/group-exec-utils": "^1.1.0-alpha.b2a4b8e1",
     "babel-core": "^6.24.1",
-    "fs-extra": "^3.0.1",
-    "@tradie/group-exec-utils": "^1.0.0"
+    "fs-extra": "^3.0.1"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
