--- a/packages/eslint-utils/package.json
+++ b/packages/eslint-utils/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@tradie/eslint-utils",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
   "dependencies": {
+    "@tradie/group-exec-utils": "^1.1.0-alpha.b2a4b8e1",
     "chalk": "^1.1.3",
     "eslint": "^4.0.0",
     "fs-extra": "^3.0.1",
-    "text-table": "^0.2.0",
-    "@tradie/group-exec-utils": "^1.0.0"
+    "text-table": "^0.2.0"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
