--- a/packages/file-processor-utils/package.json
+++ b/packages/file-processor-utils/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@tradie/file-processor-utils",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
   "dependencies": {
-    "@tradie/file-utils": "^1.0.0",
-    "@tradie/reporter-utils": "^1.0.0"
+    "@tradie/file-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/reporter-utils": "^1.1.0-alpha.b2a4b8e1"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
