--- a/packages/file-utils/package.json
+++ b/packages/file-utils/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@tradie/file-utils",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
   "dependencies": {
+    "@tradie/match-utils": "^1.1.0-alpha.b2a4b8e1",
     "chokidar": "^1.7.0",
-    "finder-on-steroids": "^0.4.0",
-    "@tradie/match-utils": "^1.0.0"
+    "finder-on-steroids": "^0.4.0"
   },
   "devDependencies": {
     "fs-extra": "^4.0.2"
