--- a/packages/flow-utils/package.json
+++ b/packages/flow-utils/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@tradie/flow-utils",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
   "dependencies": {
-    "@tradie/group-exec-utils": "^1.0.0",
+    "@tradie/group-exec-utils": "^1.1.0-alpha.b2a4b8e1",
     "chalk": "^1.1.3",
     "flow-bin": "^0.53.0",
     "fs-extra": "^3.0.1",
