--- a/packages/node-package-example/package.json
+++ b/packages/node-package-example/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@tradie/node-package-example",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "private": true,
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
-    "@tradie/node-package-template": "^1.0.0"
+    "@tradie/node-package-template": "^1.1.0-alpha.b2a4b8e1"
   },
   "scripts": {
     "clean": "tradie clean",
