--- a/packages/node-package-scripts/package.json
+++ b/packages/node-package-scripts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tradie/node-package-scripts",
   "description": "Scripts for creating NodeJS packages.",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.b2a4b8e1",
   "repository": "jameslnewell/tradie-v4",
   "files": [
     "lib"
@@ -9,16 +9,16 @@
   "main": "./lib/index.js",
   "tradie-template": "tradie-template-node-package",
   "dependencies": {
-    "del": "^3.0.0",
-    "@tradie/babel-utils": "^1.0.0",
-    "@tradie/eslint-utils": "^1.0.0",
-    "@tradie/file-utils": "^1.0.0",
-    "@tradie/flow-utils": "^1.0.0",
-    "@tradie/generator-utils": "^1.0.0",
-    "@tradie/jest-utils": "^1.0.0",
-    "@tradie/match-utils": "^1.0.0",
-    "@tradie/file-processor-utils": "^1.0.0",
-    "@tradie/reporter-utils": "^1.0.0"
+    "@tradie/babel-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/eslint-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/file-processor-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/file-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/flow-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/generator-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/jest-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/match-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/reporter-utils": "^1.1.0-alpha.b2a4b8e1",
+    "del": "^3.0.0"
   },
   "scripts": {
     "clean": "tradie clean",
