--- a/packages/file-utils/package.json
+++ b/packages/file-utils/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "anymatch": "^1.3.0",
     "chokidar": "^1.7.0",
-    "finder-on-steroids": "^0.4.0"
+    "finder-on-steroids": "^0.4.0",
+    "fs-extra": "^4.0.2"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
