--- a/packages/node-package-scripts/package.json
+++ b/packages/node-package-scripts/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-flow": "^6.23.0",
+    "babel-register": "^6.26.0",
     "del": "^3.0.0",
     "semver": "^5.4.1"
   },
