feat: add an alias for the current package

--- a/packages/node-package-example/package.json
+++ b/packages/node-package-example/package.json
@@ -17,6 +17,7 @@
     "build": "tradie build",
     "watch": "tradie build --watch",
     "test": "tradie test",
+    "example": "tradie example",
     "prepublishOnly": "tradie clean && tradie lint && tradie test && tradie build"
   }
 }
