--- a/packages/node-package-example/package.json
+++ b/packages/node-package-example/package.json
@@ -2,6 +2,7 @@
   "name": "@tradie/node-package-example",
   "version": "1.1.0-alpha.b2a4b8e1",
   "private": true,
+  "main": "lib/index.js",
   "files": [
     "lib"
   ],
