--- a/packages/node-package-scripts/tpl/package.json
+++ b/packages/node-package-scripts/tpl/package.json
@@ -11,6 +11,7 @@
     "build": "tradie build",
     "watch": "tradie build --watch",
     "test": "tradie test",
-    "prepublish": "tradie clean && tradie lint && tradie test && tradie build"
+    "prepublishOnly":
+      "tradie clean && tradie lint && tradie test && tradie build"
   }
 }
