--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -2,10 +2,7 @@
   "name": "@tradie/cli-utils",
   "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
-  "tradie-template": "tradie-template-node-package",
+  "files": ["lib", ".flowconfig"],
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
