--- a/packages/node-package-scripts/tpl/package.json
+++ b/packages/node-package-scripts/tpl/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-package-example",
   "version": "1.0.0",
-  "files": ["lib"],
+  "files": ["lib",".flowconfig"],
   "devDependencies": {
     "@tradie/node-package-template": "^<%= version %>"
   },
