--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@tradie/cli",
   "version": "1.1.0-alpha.b2a4b8e1",
-  "description": "A CLI for building web apps. Like create-react-app but configurable via templates.",
+  "description":
+    "A CLI for building web apps. Like create-react-app but configurable via templates.",
   "keywords": [
     "webpack",
     "hot-reloading",
@@ -14,16 +15,13 @@
   ],
   "repository": "jameslnewell/tradie-v4",
   "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "chalk": "^1.1.3",
     "resolve": "^1.3.3",
     "yargs": "^8.0.1"
   },
-  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
