--- a/packages/file-utils/package.json
+++ b/packages/file-utils/package.json
@@ -2,16 +2,13 @@
   "name": "@tradie/file-utils",
   "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "anymatch": "^1.3.0",
     "chokidar": "^1.7.0",
     "finder-on-steroids": "^0.4.0",
     "fs-extra": "^4.0.2"
   },
-  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "lint": "tradie lint",
     "clean": "tradie clean",
