--- a/packages/jest-utils/package.json
+++ b/packages/jest-utils/package.json
@@ -2,16 +2,13 @@
   "name": "@tradie/jest-utils",
   "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "babel-core": "^6.25.0",
     "glob": "^7.1.2",
     "jest": "^20.0.4",
     "mkdirp": "^0.5.1"
   },
-  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
