--- a/packages/rollup-utils/package.json
+++ b/packages/rollup-utils/package.json
@@ -2,13 +2,10 @@
   "name": "@tradie/rollup-utils",
   "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "rollup": "^0.45.2"
   },
-  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
