--- a/packages/webpack-utils/package.json
+++ b/packages/webpack-utils/package.json
@@ -2,15 +2,12 @@
   "name": "@tradie/webpack-utils",
   "version": "1.1.0-alpha.b2a4b8e1",
   "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "detect-port": "^1.2.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
-  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
