--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
   "lerna": "2.0.0",
   "version": "independent",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "command": {
     "publish": {
