--- a/packages/jest-utils/package.json
+++ b/packages/jest-utils/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@tradie/jest-utils",
-  "version": "1.1.0-alpha.b2a4b8e1",
+  "version": "1.1.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
     "babel-core": "^6.25.0",
     "glob": "^7.1.2",
