--- a/packages/babel-utils/package.json
+++ b/packages/babel-utils/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@tradie/babel-utils",
-  "version": "1.1.0-alpha.b2a4b8e1",
+  "version": "1.1.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
     "babel-core": "^6.24.1",
-    "fs-extra": "^3.0.1",
-    "chalk": "^2.1.0"
+    "chalk": "^2.1.0",
+    "fs-extra": "^3.0.1"
   },
   "scripts": {
     "clean": "tradie clean",
