--- a/packages/file-utils/package.json
+++ b/packages/file-utils/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@tradie/file-utils",
-  "version": "1.1.0-alpha.b2a4b8e1",
+  "version": "1.1.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
     "anymatch": "^1.3.0",
     "chokidar": "^1.7.0",
