--- a/packages/reporter-utils/package.json
+++ b/packages/reporter-utils/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@tradie/reporter-utils",
-  "version": "1.1.0-alpha.b2a4b8e1",
+  "version": "1.1.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
-    "@tradie/cli-utils": "^1.1.0-alpha.b2a4b8e1",
+    "@tradie/cli-utils": "^1.1.0",
     "chalk": "^2.0.1",
     "lodash.padstart": "^4.6.1",
     "lodash.sortby": "^4.7.0",
