--- a/packages/webpack-utils/package.json
+++ b/packages/webpack-utils/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@tradie/webpack-utils",
-  "version": "1.1.0-alpha.b2a4b8e1",
+  "version": "1.1.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
     "detect-port": "^1.2.1",
     "webpack": "^3.4.1",
