chore: use conventional commits

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "lerna run build",
     "test": "lerna run test",
     "publish":
-      "yarn run lint && yarn run build && yarn run test && lerna publish",
+      "yarn run lint && yarn run build && yarn run test && lerna publish --conventional-commits",
     "commitmsg": "commitlint -e",
     "precommit": "lint-staged",
     "prepublishOnly": "echo 'Run `npm run publish` instead.' && exit 1"
