fix: include template files on npm

--- a/packages/node-package-scripts/package.json
+++ b/packages/node-package-scripts/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@tradie/node-package-scripts",
-  "description": "An opinionated set of scripts for creating and maintaining node packages.",
+  "description":
+    "An opinionated set of scripts for creating and maintaining node packages.",
   "version": "1.1.2",
   "repository": "jameslnewell/tradie-v4",
-  "files": [
-    "lib",
-    ".flowconfig"
-  ],
+  "files": ["lib", "tpl", ".flowconfig"],
   "bin": {
     "tradie": "lib/index.js"
   },
