--- a/packages/node-package-scripts/package.json
+++ b/packages/node-package-scripts/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@tradie/node-package-scripts",
-  "description":
-    "An opinionated set of scripts for creating and maintaining node packages.",
-  "version": "1.1.6",
+  "description": "An opinionated set of scripts for creating and maintaining node packages.",
+  "version": "1.1.7",
   "repository": "jameslnewell/tradie-v4",
-  "files": [".flowconfig", "lib", "tpl"],
+  "files": [
+    ".flowconfig",
+    "lib",
+    "tpl"
+  ],
   "bin": {
     "tradie": "lib/index.js"
   },
