--- a/packages/react-component-scripts/package.json
+++ b/packages/react-component-scripts/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "@tradie/node-package-example",
-  "version": "1.1.7",
-  "private": true,
-  "main": "lib/index.js",
+  "name": "node-package-example",
+  "version": "1.0.1",
   "files": [
     "lib",
     ".flowconfig"
   ],
-  "engines": {
-    "node": "8"
-  },
   "devDependencies": {
     "@tradie/node-package-scripts": "^1.1.9"
   },
@@ -19,7 +14,6 @@
     "build": "tradie build",
     "watch": "tradie build --watch",
     "test": "tradie test",
-    "example": "tradie example",
     "prepublishOnly": "tradie clean && tradie lint && tradie test && tradie build"
   }
 }
