--- a/packages/eslint-utils/package.json
+++ b/packages/eslint-utils/package.json
@@ -2,10 +2,7 @@
   "name": "@tradie/eslint-utils",
   "version": "1.1.0",
   "main": "lib/index.js",
-  "files": [
-    "lib",
-    ".flowconfig"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "chalk": "^1.1.3",
     "eslint": "^4.0.0",
