--- a/packages/file-utils/package.json
+++ b/packages/file-utils/package.json
@@ -2,13 +2,11 @@
   "name": "@tradie/file-utils",
   "version": "1.1.0",
   "main": "lib/index.js",
-  "files": [
-    "lib",
-    ".flowconfig"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "anymatch": "^1.3.0",
     "chokidar": "^1.7.0",
+    "del": "^3.0.0",
     "finder-on-steroids": "^0.4.0",
     "fs-extra": "^4.0.2"
   },
