--- a/packages/flow-utils/package.json
+++ b/packages/flow-utils/package.json
@@ -2,10 +2,7 @@
   "name": "@tradie/flow-utils",
   "version": "1.1.0",
   "main": "lib/index.js",
-  "files": [
-    "lib",
-    ".flowconfig"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "@tradie/group-exec-utils": "^1.1.0-alpha.b2a4b8e1",
     "chalk": "^1.1.3",
