--- a/packages/node-package-example/package.json
+++ b/packages/node-package-example/package.json
@@ -3,10 +3,7 @@
   "version": "1.1.7",
   "private": true,
   "main": "lib/index.js",
-  "files": [
-    "lib",
-    ".flowconfig"
-  ],
+  "files": ["lib", ".flowconfig"],
   "engines": {
     "node": "8"
   },
@@ -20,6 +17,7 @@
     "watch": "tradie build --watch",
     "test": "tradie test",
     "example": "tradie example",
-    "prepublishOnly": "tradie clean && tradie lint && tradie test && tradie build"
+    "prepublishOnly":
+      "tradie clean && tradie lint && tradie test && tradie build"
   }
 }
