--- a/packages/rollup-utils/package.json
+++ b/packages/rollup-utils/package.json
@@ -2,10 +2,7 @@
   "name": "@tradie/rollup-utils",
   "version": "1.1.0",
   "main": "lib/index.js",
-  "files": [
-    "lib",
-    ".flowconfig"
-  ],
+  "files": ["lib", ".flowconfig"],
   "dependencies": {
     "rollup": "^0.45.2"
   },
