--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "lint": "lerna run lint",
     "build": "lerna run build",
     "test": "lerna run test",
-    "publish":
-      "yarn run lint && yarn run build && yarn run test && lerna publish --conventional-commits",
+    "publish": "yarn run lint && yarn run build && yarn run test && lerna publish --canary --exact",
     "commitmsg": "commitlint -e",
     "precommit": "lint-staged",
     "prepublishOnly": "echo 'Run `npm run publish` instead.' && exit 1"
