--- a/packages/react-component-scripts/package.json
+++ b/packages/react-component-scripts/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "@tradie/cli": "^1.1.1",
     "@tradie/file-utils": "^1.1.0",
+    "@tradie/babel-utils": "^1.1.0",
+    "@tradie/eslint-utils": "^1.1.0",
+    "@tradie/flow-utils": "^1.1.0",
     "@tradie/reporter-utils": "^1.1.0",
     "@tradie/webpack-utils": "^1.1.0",
     "@tradie/jest-utils": "^1.1.0",
