fix: bigger timeout and next

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lint": "lerna run lint",
     "build": "lerna run build",
     "test": "lerna run test",
-    "publish": "yarn run lint && yarn run build && yarn run test && lerna publish --canary --exact",
+    "publish":
+      "yarn run lint && yarn run build && yarn run test && lerna publish --canary --exact --npm-tag=next",
     "commitmsg": "commitlint -e",
     "precommit": "lint-staged",
     "prepublishOnly": "echo 'Run `npm run publish` instead.' && exit 1"
