fix: publish as public

--- a/packages/react-component-scripts/package.json
+++ b/packages/react-component-scripts/package.json
@@ -34,5 +34,8 @@
     "test": "tradie test",
     "prepublishOnly": "tradie clean && tradie lint && tradie test && tradie build"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT"
 }
