--- a/packages/flow-utils/package.json
+++ b/packages/flow-utils/package.json
@@ -5,9 +5,9 @@
   "files": ["lib", ".flowconfig"],
   "dependencies": {
     "@tradie/group-exec-utils": "^1.1.0-alpha.b2a4b8e1",
-    "chalk": "^1.1.3",
-    "flow-bin": "^0.53.0",
-    "fs-extra": "^3.0.1",
+    "chalk": "^2.3.0",
+    "flow-bin": "^0.63.1",
+    "fs-extra": "^5.0.0",
     "shell-escape": "^0.2.0",
     "sprintf-js": "^1.1.1"
   },
@@ -21,5 +21,6 @@
     "watch": "tradie build --watch",
     "test": "tradie test"
   },
-  "tradie-template": "tradie-template-node-package"
+  "tradie-template": "tradie-template-node-package",
+  "license": "MIT"
 }
