--- a/packages/utils/typescript/package.json
+++ b/packages/utils/typescript/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@tradie/jest-utils",
-  "version": "2.0.0",
+  "name": "@tradie/typescript-utils",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "files": ["lib"],
   "dependencies": {
-    "jest-cli": "^22.4.2",
-    "babel-core": "^6.26.0",
+    "@tradie/file-utils": "^1.1.0",
     "typescript": "^2.7.2"
   },
   "scripts": {
