--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "bootstrap": "node scripts/symlink-previous-version.js",
     "upgrade": "lerna exec --concurrency 1 -- npm-check -u",
     "commit": "commit",
-    "lint": "lerna run lint",
-    "build": "lerna run build",
-    "test": "lerna run test",
-    "publish":
-      "yarn run lint && yarn run build && yarn run test && lerna publish --canary --exact --npm-tag=next",
+    "lint": "lerna run lint --ignore \"@tradie/component-*\"",
+    "build": "lerna run build --ignore \"@tradie/component-*\"",
+    "test": "lerna run test --ignore \"@tradie/component-*\"",
+    "publish": "yarn run lint && yarn run build && lerna publish --canary --exact --npm-tag=next",
     "commitmsg": "commitlint -e",
     "precommit": "lint-staged",
     "prepublishOnly": "echo 'Run `npm run publish` instead.' && exit 1"
