--- a/packages/scripts/component/package.json
+++ b/packages/scripts/component/package.json
@@ -12,8 +12,8 @@
     "@tradie/eslint-utils": "^1.1.0",
     "@tradie/file-utils": "^1.1.0",
     "@tradie/flow-utils": "^1.1.0",
-    "@tradie/jest-utils": "^2.0.0",
-    "@tradie/processor-utils": "^1.0.0",
+    "@tradie/jest-utils": "^2.0.0-preview.1",
+    "@tradie/processor-utils": "^2.0.0-preview.1",
     "@tradie/reporter-utils": "^1.1.0",
     "@tradie/webpack-utils": "^1.1.0",
     "babel-core": "^6.26.0",
