--- a/packages/utils/file/package.json
+++ b/packages/utils/file/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/file-utils",
-  "version": "1.1.0",
+  "version": "2.0.0-preview.1",
   "main": "lib/index.js",
   "files": ["lib", ".flowconfig"],
   "dependencies": {
