--- a/packages/utils/jest/package.json
+++ b/packages/utils/jest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/jest-utils",
-  "version": "2.0.0",
+  "version": "2.0.0-preview.1",
   "main": "lib/index.js",
   "files": ["lib"],
   "dependencies": {
