--- a/packages/utils/processor/package.json
+++ b/packages/utils/processor/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@tradie/processor-utils",
-  "version": "1.0.0",
+  "version": "2.0.0-preview.1",
   "main": "lib/index.js",
   "files": ["lib", ".flowconfig"],
   "dependencies": {
-    "@tradie/file-utils": "^1.1.0",
-    "@tradie/reporter-utils": "^1.0.0"
+    "@tradie/file-utils": "^2.0.0-preview.1",
+    "@tradie/reporter-utils": "^2.0.0-preview.1"
   },
   "scripts": {
     "lint": "tradie lint",
