--- a/packages/utils/reporter/package.json
+++ b/packages/utils/reporter/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@tradie/reporter-utils",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": ["lib"],
   "dependencies": {
     "@tradie/cli-utils": "^1.1.0",
     "chalk": "^2.0.1",
