--- a/packages/utils/typescript/package.json
+++ b/packages/utils/typescript/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@tradie/typescript-utils",
-  "version": "1.0.0",
+  "version": "1.0.0-preview.1",
   "main": "lib/index.js",
   "files": ["lib"],
   "dependencies": {
-    "@tradie/file-utils": "^1.1.0",
+    "@tradie/file-utils": "^2.0.0-preview.1",
     "typescript": "^2.7.2"
   },
   "scripts": {
