chore: bumped changelogs

--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "scripts": {
     "clean": "lerna run clean && lerna clean",
-    "bootstrap": "node scripts/symlink-previous-version.js",
+    "link": "node scripts/symlink-previous-version.js",
     "upgrade": "lerna exec --concurrency 1 -- npm-check -u",
     "commit": "commit",
     "lint": "lerna run lint --ignore \"@tradie/component-*\"",
     "build": "lerna run build --ignore \"@tradie/component-*\"",
     "test": "lerna run test --ignore \"@tradie/component-*\"",
-    "publish": "yarn run lint && yarn run build && lerna publish --canary --exact --npm-tag=next",
+    "publish":
+      "yarn run lint && yarn run build && lerna publish --canary --exact --npm-tag=next --access=public",
     "commitmsg": "commitlint -e",
     "precommit": "lint-staged",
     "prepublishOnly": "echo 'Run `npm run publish` instead.' && exit 1"
