--- a/packages/scripts/node/package.json
+++ b/packages/scripts/node/package.json
@@ -18,7 +18,8 @@
     "@tradie/typescript-utils": "^1.0.0-preview.1",
     "ts-jest": "^22.4.0",
     "ts-node": "^5.0.0",
-    "tslint-config-prettier": "^1.9.0"
+    "tslint-config-prettier": "^1.9.0",
+    "tslint-microsoft-contrib": "^5.0.3"
   },
   "scripts": {
     "clean": "node-scripts clean",
