--- a/packages/utils/processor/package.json
+++ b/packages/utils/processor/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@jameslnewell/cancelable-promise": "^1.0.0",
     "@tradie/file-utils": "^2.0.0-preview.1",
-    "@tradie/reporter-utils": "^2.0.0-preview.1"
+    "@tradie/reporter-utils": "^2.0.0"
   },
   "scripts": {
     "lint": "node-scripts lint",
