--- a/packages/utils/typescript/package.json
+++ b/packages/utils/typescript/package.json
@@ -6,6 +6,7 @@
   "files": ["lib"],
   "dependencies": {
     "@tradie/file-utils": "^2.0.0-preview.1",
+    "@tradie/reporter-utils": "^2.0.0",
     "typescript": "^2.7.2"
   },
   "scripts": {
