--- a/packages/examples/node/package.json
+++ b/packages/examples/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/node-example",
-  "version": "2.0.0-preview.1",
+  "version": "2.0.0-alpha.f106bb76",
   "private": true,
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,7 +9,7 @@
     "@types/node": "^9.4.6"
   },
   "devDependencies": {
-    "@tradie/node-scripts": "^1.0.0-preview.1",
+    "@tradie/node-scripts": "1.0.0-alpha.f106bb76",
     "@types/jest": "^22.2.0"
   },
   "scripts": {
