--- a/packages/misc/cli/package.json
+++ b/packages/misc/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/cli",
-  "version": "2.0.0-preview.1",
+  "version": "2.0.0-alpha.f106bb76",
   "description":
     "A CLI for building web apps. Like create-react-app but configurable via templates.",
   "keywords": [
