--- a/packages/utils/cli/package.json
+++ b/packages/utils/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/cli-utils",
-  "version": "1.1.0",
+  "version": "1.2.0-alpha.f106bb76",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": ["lib"],
