--- a/packages/utils/file/package.json
+++ b/packages/utils/file/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@tradie/file-utils",
-  "version": "2.0.0-preview.1",
+  "version": "2.0.0-alpha.f106bb76",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": ["lib"],
   "dependencies": {
+    "@jameslnewell/cancelable-promise": "1.1.0-alpha.f106bb76",
     "@types/anymatch": "^1.3.0",
     "@types/chokidar": "^1.7.5",
     "@types/del": "^3.0.0",
     "@types/fs-extra": "^5.0.1",
     "@types/node": "^6.0.102",
-    "@jameslnewell/cancelable-promise": "^1.0.0",
     "anymatch": "^1.3.0",
     "chokidar": "^1.7.0",
     "del": "^3.0.0",
