--- a/packages/utils/jest/package.json
+++ b/packages/utils/jest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/jest-utils",
-  "version": "2.0.0-preview.1",
+  "version": "2.0.0-alpha.f106bb76",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": ["lib"],
