--- a/packages/utils/processor/package.json
+++ b/packages/utils/processor/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@tradie/processor-utils",
-  "version": "2.0.0-preview.1",
+  "version": "2.0.0-alpha.f106bb76",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": ["lib"],
   "dependencies": {
-    "@jameslnewell/cancelable-promise": "^1.0.0",
-    "@tradie/file-utils": "^2.0.0-preview.1",
-    "@tradie/reporter-utils": "^2.0.0"
+    "@jameslnewell/cancelable-promise": "1.1.0-alpha.f106bb76",
+    "@tradie/file-utils": "2.0.0-alpha.f106bb76",
+    "@tradie/reporter-utils": "2.1.0-alpha.f106bb76"
   },
   "scripts": {
-    "lint": "node-scripts lint",
     "clean": "node-scripts clean",
     "build": "node-scripts build",
     "watch": "node-scripts build --watch",
