--- a/packages/utils/reporter/package.json
+++ b/packages/utils/reporter/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@tradie/reporter-utils",
-  "version": "2.0.0",
+  "version": "2.1.0-alpha.f106bb76",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": ["lib"],
   "dependencies": {
-    "@tradie/cli-utils": "^1.1.0",
+    "@tradie/cli-utils": "1.2.0-alpha.f106bb76",
     "@types/lodash": "^4.14.108",
-    "lodash": "^4.17.10",
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "lodash": "^4.17.10"
   },
   "scripts": {
     "clean": "node-scripts clean",
