--- a/packages/utils/rollup/package.json
+++ b/packages/utils/rollup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/rollup-utils",
-  "version": "1.1.0",
+  "version": "1.2.0-alpha.f106bb76",
   "main": "lib/index.js",
   "files": ["lib", ".flowconfig"],
   "dependencies": {
