--- a/packages/utils/tslint/package.json
+++ b/packages/utils/tslint/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@tradie/tslint-utils",
-  "version": "1.0.0-preview.1",
+  "version": "1.0.0-alpha.f106bb76",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": ["lib"],
   "dependencies": {
-    "tslint": "^5.9.1",
-    "@tradie/reporter-utils": "^2.0.0-preview.1"
+    "@tradie/reporter-utils": "2.1.0-alpha.f106bb76",
+    "tslint": "^5.9.1"
   },
   "scripts": {
     "clean": "node-scripts clean",
