--- a/packages/utils/typescript/package.json
+++ b/packages/utils/typescript/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@tradie/typescript-utils",
-  "version": "1.0.0-preview.1",
+  "version": "1.0.0-alpha.f106bb76",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": ["lib"],
   "dependencies": {
-    "@tradie/file-utils": "^2.0.0-preview.1",
-    "@tradie/reporter-utils": "^2.0.0",
+    "@tradie/file-utils": "2.0.0-alpha.f106bb76",
+    "@tradie/reporter-utils": "2.1.0-alpha.f106bb76",
     "typescript": "^2.7.2"
   },
   "scripts": {
