--- a/packages/scripts/component/package.json
+++ b/packages/scripts/component/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@tradie/component-scripts",
-  "version": "1.0.0-alpha.f106bb76",
+  "version": "1.0.0-alpha.0bf35fa6",
   "files": ["lib", ".flowconfig"],
   "bin": {
     "tradie": "lib/index.js"
   },
   "dependencies": {
-    "@tradie/babel-utils": "1.2.0-alpha.f106bb76",
+    "@tradie/babel-utils": "1.2.0-alpha.0bf35fa6",
     "@tradie/cli": "^1.1.1",
-    "@tradie/eslint-utils": "1.2.0-alpha.f106bb76",
+    "@tradie/eslint-utils": "1.2.0-alpha.0bf35fa6",
     "@tradie/file-utils": "^1.1.0",
-    "@tradie/flow-utils": "1.2.0-alpha.f106bb76",
-    "@tradie/jest-utils": "2.0.0-alpha.f106bb76",
-    "@tradie/processor-utils": "2.0.0-alpha.f106bb76",
+    "@tradie/flow-utils": "1.2.0-alpha.0bf35fa6",
+    "@tradie/jest-utils": "2.0.0-alpha.0bf35fa6",
+    "@tradie/processor-utils": "2.0.0-alpha.0bf35fa6",
     "@tradie/reporter-utils": "^1.1.0",
-    "@tradie/webpack-utils": "1.2.0-alpha.f106bb76",
+    "@tradie/webpack-utils": "1.2.0-alpha.0bf35fa6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -33,7 +33,7 @@
     "build": "node-scripts build && chmod 0755 ./lib/index.js",
     "watch": "node-scripts build --watch",
     "test": "node-scripts test",
-    "prepublishOnly": "node-scripts clean && tradie lint && tradie test && tradie build"
+    "prepublishOnly": "node-scripts clean && node-scripts test && node-scripts build"
   },
   "publishConfig": {
     "access": "public"
