--- a/packages/utils/processor/package.json
+++ b/packages/utils/processor/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "files": ["lib"],
   "dependencies": {
-    "@jameslnewell/cancelable-promise": "1.1.0-alpha.f106bb76",
+    "@jameslnewell/cancelable-promise": "^1.0.2",
     "@tradie/file-utils": "2.0.0-alpha.0bf35fa6",
     "@tradie/reporter-utils": "2.1.0-alpha.0bf35fa6"
   },
