--- a/packages/utils/file/package.json
+++ b/packages/utils/file/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "files": ["lib"],
   "dependencies": {
-    "@jameslnewell/cancelable-promise": "1.1.0-alpha.f106bb76",
+    "@jameslnewell/cancelable-promise": "^1.0.2",
     "@types/anymatch": "^1.3.0",
     "@types/chokidar": "^1.7.5",
     "@types/del": "^3.0.0",
