--- a/packages/scripts/node/package.json
+++ b/packages/scripts/node/package.json
@@ -16,6 +16,8 @@
     "@tradie/reporter-utils": "2.1.0-alpha.4fedd406",
     "@tradie/tslint-utils": "1.0.0-alpha.4fedd406",
     "@tradie/typescript-utils": "1.0.0-alpha.4fedd406",
+    "jest": "^22.4.2",
+    "typescript": "^2.7.2",
     "ts-jest": "^22.4.0",
     "ts-node": "^5.0.0",
     "tslint-config-prettier": "^1.9.0",
