--- a/packages/scripts/node/package.json
+++ b/packages/scripts/node/package.json
@@ -20,6 +20,7 @@
     "typescript": "^2.7.2",
     "ts-jest": "^22.4.0",
     "ts-node": "^5.0.0",
+    "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.9.0",
     "tslint-microsoft-contrib": "^5.0.3"
   },
