--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "commit": "commit",
     "build": "lerna run build --ignore \"@tradie/component-*\"",
     "test": "lerna run test --ignore \"@tradie/component-*\"",
-    "publish": "yarn run build && lerna publish --canary --exact --npm-tag=next --access=public",
+    "publish:preview":
+      "yarn run build && lerna publish --canary --exact --npm-tag=next --access=public",
+    "publish:conventional":
+      "yarn run build && lerna publish --conventional-commits --access=public",
     "commitmsg": "commitlint -e",
     "precommit": "lint-staged",
     "postinstall": "yarn run link",
