--- a/packages/utils/babel/package.json
+++ b/packages/utils/babel/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@tradie/babel-utils",
-  "version": "1.2.0-alpha.4fedd406",
+  "version": "1.2.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
     "babel-core": "^6.24.1",
     "chalk": "^2.4.1",
