--- a/packages/utils/file/package.json
+++ b/packages/utils/file/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@tradie/file-utils",
-  "version": "2.0.0-alpha.4fedd406",
+  "version": "2.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "@jameslnewell/cancelable-promise": "^1.0.2",
     "@types/anymatch": "^1.3.0",
