--- a/packages/utils/flow/package.json
+++ b/packages/utils/flow/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@tradie/flow-utils",
-  "version": "1.2.0-alpha.4fedd406",
+  "version": "1.2.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
     "@tradie/group-exec-utils": "^1.1.0-alpha.b2a4b8e1",
     "chalk": "^2.4.1",
