--- a/packages/utils/generator/package.json
+++ b/packages/utils/generator/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@tradie/generator-utils",
-  "version": "1.2.0-alpha.4fedd406",
+  "version": "1.2.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
-    "@tradie/file-utils": "2.0.0-alpha.4fedd406",
+    "@tradie/file-utils": "^2.0.0",
     "@types/diff": "^3.5.1",
     "@types/extend": "^3.0.0",
     "@types/inquirer": "^0.0.41",
