--- a/packages/utils/jest/package.json
+++ b/packages/utils/jest/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@tradie/jest-utils",
-  "version": "2.0.0-alpha.4fedd406",
+  "version": "2.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "@types/babel-core": "^6.25.3",
     "babel-core": "^6.26.0",
