--- a/packages/utils/reporter/package.json
+++ b/packages/utils/reporter/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@tradie/reporter-utils",
-  "version": "2.1.0-alpha.4fedd406",
+  "version": "2.1.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
-    "@tradie/cli-utils": "1.2.0-alpha.4fedd406",
+    "@tradie/cli-utils": "^1.2.0",
     "@types/lodash": "^4.14.108",
     "chalk": "^2.4.1",
     "lodash": "^4.17.10"
