--- a/packages/utils/rollup/package.json
+++ b/packages/utils/rollup/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@tradie/rollup-utils",
-  "version": "1.2.0-alpha.4fedd406",
+  "version": "1.2.0",
   "main": "lib/index.js",
-  "files": ["lib", ".flowconfig"],
+  "files": [
+    "lib",
+    ".flowconfig"
+  ],
   "dependencies": {
     "rollup": "^0.45.2"
   },
