--- a/packages/utils/tslint/package.json
+++ b/packages/utils/tslint/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@tradie/tslint-utils",
-  "version": "1.0.0-alpha.4fedd406",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
-    "@tradie/reporter-utils": "2.1.0-alpha.4fedd406",
+    "@tradie/reporter-utils": "^2.1.0",
     "tslint": "^5.9.1"
   },
   "scripts": {
