--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,6 +6,6 @@
     "finder-on-steroids": "^1.0.2",
     "fs-extra": "^6.0.1",
     "resolve": "^1.4.0",
-    "@tradie/node-scripts": "^1.0.0-alpha.5ba089db"
+    "@tradie/node-scripts": "^1.0.0"
   }
 }
