--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "link": "node scripts/symlink-previous-version.js",
     "upgrade": "lerna exec --concurrency 1 -- npm-check -u",
     "commit": "commit",
-    "build": "lerna run build --ignore \"@tradie/component-*\"",
-    "test": "lerna run test --ignore \"@tradie/component-*\"",
+    "build": "lerna run build",
+    "test": "lerna run test --scope \"@tradie/processor-utils\"",
     "publish:preview":
-      "yarn run build && lerna publish --canary --exact --npm-tag=next --access=public",
+      "yarn run build && yarn run test && lerna publish --canary --exact --npm-tag=next --access=public",
     "publish:conventional":
-      "yarn run build && lerna publish --conventional-commits --access=public",
+      "yarn run build && yarn run test && lerna publish --conventional-commits --access=public",
     "commitmsg": "commitlint -e",
     "precommit": "lint-staged",
     "postinstall": "yarn run link",
