--- a/packages/scripts/node/package.json
+++ b/packages/scripts/node/package.json
@@ -3,10 +3,7 @@
   "description": "An opinionated set of scripts for creating and maintaining node packages.",
   "version": "1.0.0",
   "repository": "jameslnewell/tradie-v4",
-  "files": [
-    "lib",
-    "tpl"
-  ],
+  "files": ["lib", "tpl"],
   "bin": {
     "node-scripts": "lib/index.js"
   },
@@ -15,7 +12,7 @@
     "@tradie/file-utils": "^2.0.0",
     "@tradie/generator-utils": "^1.2.0",
     "@tradie/jest-utils": "^2.0.0",
-    "@tradie/processor-utils": "^2.0.0",
+    "@tradie/processor-utils": "^3.0.0",
     "@tradie/reporter-utils": "^2.1.0",
     "@tradie/tslint-utils": "^1.0.0",
     "@tradie/typescript-utils": "^1.0.0",
