--- a/packages/utils/file/package.json
+++ b/packages/utils/file/package.json
@@ -3,9 +3,7 @@
   "version": "2.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "dependencies": {
     "@jameslnewell/cancelable-promise": "^1.0.2",
     "@types/anymatch": "^1.3.0",
@@ -16,7 +14,7 @@
     "anymatch": "^1.3.0",
     "chokidar": "^1.7.0",
     "del": "^3.0.0",
-    "finder-on-steroids": "^1.0.2",
+    "finder-on-steroids": "^1.0.3",
     "fs-extra": "^6.0.1"
   },
   "scripts": {
